// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button recieves correct styling 1`] = `
<button
  className="jxo-button jxo__button"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "grey",
      "height": undefined,
      "width": undefined,
    }
  }
/>
`;

exports[`Button text displays as per args 1`] = `
<button
  className="jxo-button jxo__button"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": null,
      "height": null,
      "width": null,
    }
  }
>
  GLOOOBER
</button>
`;
